# sumcheck_multilinear_rs

./: Cargo.toml  README.md
src/: fs_pmf_prover.rs  fs_pmf_verifier.rs  gkr.rs  gkr_prover.rs  gkr_verifier.rs  ip_pmf_prover.rs  ip_pmf_verifier.rs  lib.rs  multilinear_extension.rs  pmf.rs  polynomial.rs
