[package]
name = "sumcheck_multilinear_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2b_simd = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
halo2curves = "0.7.0"
is_prime = "2.0.9"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8.5"
